<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="155dp"
        android:onClick="showMessage"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMental" />

    <SeekBar
        android:id="@+id/seekBarPhys"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="43dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/testPromptMental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPromptPhys" />

    <SeekBar
        android:id="@+id/seekBarMental"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginBottom="64dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testPromptMental" />

    <TextView
        android:id="@+id/textPromptPhys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_rating1"
        app:layout_constraintBottom_toTopOf="@+id/seekBarPhys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testPromptMental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:layout_marginBottom="24dp"
        android:text="@string/text_rating2"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPhys" />

    <TextView
        android:id="@+id/textPoorPhys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="134dp"
        android:text="@string/text_poor"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMental"
        app:layout_constraintEnd_toStartOf="@+id/textExcellentPhys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPhys" />

    <TextView
        android:id="@+id/textPoorMental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="259dp"
        android:text="@string/text_poor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textExcellentMental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMental" />

    <TextView
        android:id="@+id/textExcellentPhys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="134dp"
        android:text="@string/text_excellent"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPoorPhys"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPhys" />

    <TextView
        android:id="@+id/textExcellentMental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="259dp"
        android:text="@string/text_excellent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPoorMental"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMental" />

</androidx.constraintlayout.widget.ConstraintLayout>